--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/mysql": "^2.15.26"
+    "@types/mysql": "^2.15.26",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.7"
   }
 }
