--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "date-fns": "^3.6.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.0",
     "next": "^14.2.5",
